<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drl_px4</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="icfoss22@todo.todo">icfoss22</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gymnasium</exec_depend>
  <exec_depend>stable-baselines3</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
